  режимы Apple, включая HiRes.
* Убран отдельный чёрно-белый монитор Агат-7.
* Добавлен монохромный монитор для Apple Double Hi-Res и кодировка
  в него.
* Убран формат Picler (BOL) и перекодировка между ним и ZX Spectrum.
* Отключен выбор аппаратных палитр Агата при использовании карты
  палитр.
* Исправлены цвета Apple Hi-Res: были перепутаны фиолетовый и зелёный.

2.0.1

* Исправлено падение при загрузке картинок ЦГНР.
* Теперь гарантируется сохранение всех цветов при преобразовании
  в плату палитр, если исходное изображение использует столько же
  цветов, сколько доступно в целевом режиме, или меньше.
* Цвета для платы палитр сортируются так, чтобы выглядеть как можно
  лучше на стандартном цветном мониторе.
* Исправлено округление цветов для платы палитр: раньше они всегда
  округлялись в тёмную сторону.

2.0.0

* Добавлена поддержка мониторов:
  - Цветной
  - Чёрно-белый
  - Чёрно-белый Агат-7 для агатовских режимов
  - Цветной с картой палитр для агатовских режимов
  - Артефактные цвета NTSC для режимов Apple
* Добавлена поддержка аппаратных палитр для 4- и 2-цветных
  агатовских режимов.
* Разделены режимы Apple HiRes и Агат Apple. Apple HiRes использует
  американскую палитру с заливкой, Агат Apple -- RGB палитру без
  заливки. Также отличается отображение в чёрно-белых режимах.
* Добавлена поддержка преобразования в режим карты палитр
  с генерацией оптимальной палитры.
* Добавлена запись "хвоста" для новых изображений.
* 4- и 2-цветные агатовские режимы и Агат Apple теперь берут свои
  цвета из общей 16-цветной палитры, в том числе если она изменена
  картой палитр.
* Добавлена возможность задавать любой масштаб отображения.
* Добавлена возможность прокрутки слишком большой картинки
  как полосами прокрутки, так и перетаскиванием мышью.
* Агатовские режимы переименованы в соответствии с их названиями
  в руководствах по эксплуатации.
* Исправлено падение режимов Spectrum и Picler на файлах
  недостаточной длины.

1.9.3
