@@ -1,3 +1,5 @@
+using System.Collections.Generic;
+using System.Linq;
 using ImageLib.ColorManagement;
 using ImageLib.Util;
 
@@ -5,31 +7,41 @@ namespace ImageLib.Apple
 {
     public static class Apple2HardwareColors
     {
-        public static Rgb[] HiRes { get; } = {
-            YIQColor.From4BitsStrict(0x0, 0).ToColor(),
-            YIQColor.From4BitsStrict(0x3, 0).ToColor(),
-            YIQColor.From4BitsStrict(0x6, 0).ToColor(),
-            YIQColor.From4BitsStrict(0xC, 0).ToColor(),
-            YIQColor.From4BitsStrict(0x9, 0).ToColor(),
-            YIQColor.From4BitsStrict(0xF, 0).ToColor(),
+        // taken from AppleWin
+        private static readonly Rgb[] _rgbCardColors =
+        {
+            Rgb.FromRgb(0x00, 0x00, 0x00),
+            Rgb.FromRgb(0x99, 0x03, 0x5F),
+            Rgb.FromRgb(0x42, 0x04, 0xE1),
+            Rgb.FromRgb(0xCA, 0x13, 0xFE),
+            Rgb.FromRgb(0x00, 0x73, 0x10),
+            Rgb.FromRgb(0x7F, 0x7F, 0x7F),
+            Rgb.FromRgb(0x24, 0x97, 0xFF),
+            Rgb.FromRgb(0xAA, 0xA2, 0xFF),
+            Rgb.FromRgb(0x4F, 0x51, 0x01),
+            Rgb.FromRgb(0xF0, 0x5C, 0x00),
+            Rgb.FromRgb(0xBE, 0xBE, 0xBE),
+            Rgb.FromRgb(0xFF, 0x85, 0xE1),
+            Rgb.FromRgb(0x12, 0xCA, 0x07),
+            Rgb.FromRgb(0xCE, 0xD4, 0x13),
+            Rgb.FromRgb(0x51, 0xF5, 0x95),
+            Rgb.FromRgb(0xFF, 0xFF, 0xFE),
         };
 
-        public static Palette LoRes16 { get; } = BuildYiq16Palette(0);
-        public static Palette DoubleHiRes16 { get; } = BuildYiq16Palette(1);
+        public static Rgb[] HiRes { get; } = {
+            _rgbCardColors[0],
+            _rgbCardColors[3],
+            _rgbCardColors[6],
+            _rgbCardColors[12],
+            _rgbCardColors[9],
+            _rgbCardColors[15],
+        };
+
+        public static Palette LoRes16 { get; } = new Palette(_rgbCardColors);
+        public static Palette DoubleHiRes16 { get; } = new Palette(DoubleHiResColors());
         public static Palette Monochrome { get; } = new Palette(new[] { default(Rgb), Rgb.FromRgb(255, 255, 255) });
 
-        /// <summary>
-        /// Construct all Apple's NTSC colors.
-        /// </summary>
-        /// <returns></returns>
-        private static Palette BuildYiq16Palette(int phase)
-        {
-            var result = new Rgb[16];
-            for (int i = 0; i < 16; i++)
-            {
-                result[i] = YIQColor.From4BitsStrict(i, phase).ToColor();
-            }
-            return new Palette(result);
-        }
+        private static IEnumerable<Rgb> DoubleHiResColors() =>
+            Enumerable.Range(0, 16).Select(i => _rgbCardColors[((i & 7) << 1) | ((i & 8) >> 3)]);
     }
 }
