@@ -12,6 +12,8 @@
 * Отключен выбор аппаратных палитр Агата при использовании карты
   палитр.
 * Исправлены цвета Apple Hi-Res: были перепутаны фиолетовый и зелёный.
+* Для режимов Apple используется палитра, взятая из эмулятора AppleWin,
+  которая точнее отражает цвета Apple с цветным монитором.
 
 2.0.1
 
